[project]
name = "bsky-subscribe"
version = "0.1.0"
description = "Monitor Bluesky posts from specific users"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["atproto>=0.0.31", "anyio>=4.0.0", "pydantic-settings>=2.8.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
